SERVER-28717 Expand $lookup localField when a sub-obj field in an array Includes: - Cherry pick of commit e56f02ec6de6def5e66d0744a620515e2a82708e - Partial cherry pick of commit d60dd07f3f470b702092b6b54e15586a5177d8a1   pulling in src/mongo/db/pipeline/document_path_support* files and   associated SConscript additions